--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@unocss/reset": "^0.41.2",
-    "@vueuse/core": "^8.7.5",
-    "firebase": "^9.8.4",
-    "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.7.4",
-    "unocss": "^0.41.2",
-    "unplugin-auto-import": "^0.9.2",
-    "unplugin-vue-components": "^0.20.1",
-    "vite": "^2.9.13",
-    "vite-plugin-pwa": "^0.12.0",
-    "vue-tsc": "^0.38.2"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite --host",
+		"build": "vue-tsc --noEmit && vite build",
+		"preview": "vite preview",
+		"deploy:dev": "pnpm run build && firebase deploy --only hosting --project dev",
+		"deploy:prod": "pnpm run build && firebase deploy --only hosting --project prod"
+	},
+	"dependencies": {
+		"@unocss/reset": "^0.41.2",
+		"@vueuse/core": "^8.7.5",
+		"firebase": "^9.8.4",
+		"vue": "^3.2.37"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^2.3.3",
+		"typescript": "^4.7.4",
+		"unocss": "^0.41.2",
+		"unplugin-auto-import": "^0.9.2",
+		"unplugin-vue-components": "^0.20.1",
+		"vite": "^2.9.13",
+		"vite-plugin-pwa": "^0.12.0",
+		"vue-tsc": "^0.38.2"
+	}
 }
