--- a/.github/workflows/deploy_frontend_prod.yml
+++ b/.github/workflows/deploy_frontend_prod.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.2.2
+        with:
+          version: latest
+
       - name: Setup node
         uses: actions/setup-node@v3
         with:
