--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^2.3.3",
+		"firebase-tools": "^11.1.0",
 		"typescript": "^4.7.4",
 		"unocss": "^0.41.2",
 		"unplugin-auto-import": "^0.9.2",
