--- a/.github/workflows/deploy_rules_dev.yml
+++ b/.github/workflows/deploy_rules_dev.yml
@@ -25,6 +25,6 @@ jobs:
           node-version: '16'
 
       - name: Deploy Rules
-        run: npx firebase deploy --only storage,firestore --project dev
+        run: npx firebase-tools deploy --only storage,firestore --project dev
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
