--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,6 @@
 {
-	"firestore": {
-		"rules": "firestore.rules",
-		"indexes": "firestore.indexes.json"
-	},
 	"hosting": {
-		"public": "frontend/dist",
+		"public": "dist",
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
 		"rewrites": [
 			{
@@ -12,13 +8,6 @@
 				"destination": "/index.html"
 			}
 		]
-	},
-	"functions": {
-		"predeploy": [],
-		"postdeploy": [],
-		"ignore": ["node_modules"],
-		"source": "backend",
-		"runtime": "nodejs16"
 	},
 	"storage": {
 		"rules": "storage.rules"
