--- a/package.json
+++ b/package.json
@@ -1,5 +1,32 @@
 {
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite --host",
+		"build": "vue-tsc --noEmit && vite build",
+		"preview": "vite preview",
+		"deploy:dev": "pnpm run build && firebase deploy --only hosting --project dev",
+		"deploy:prod": "pnpm run build && firebase deploy --only hosting --project prod"
+	},
+	"dependencies": {
+		"@unocss/reset": "^0.42.0",
+		"@vueuse/core": "^8.7.5",
+		"firebase": "^9.8.4",
+		"nanoid": "^4.0.0",
+		"vue": "^3.2.37"
+	},
 	"devDependencies": {
-		"prettier": "^2.7.1"
+		"@types/wicg-file-system-access": "^2020.9.5",
+		"@vitejs/plugin-vue": "^2.3.3",
+		"firebase-tools": "^11.2.0",
+		"prettier": "^2.7.1",
+		"typescript": "^4.7.4",
+		"unocss": "^0.42.0",
+		"unplugin-auto-import": "^0.9.2",
+		"unplugin-vue-components": "^0.21.0",
+		"vite": "^2.9.13",
+		"vite-plugin-pwa": "^0.12.2",
+		"vue-tsc": "^0.38.2"
 	}
 }
