--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"vue": "^3.2.37"
 	},
 	"devDependencies": {
+		"@iconify-json/material-symbols": "^1.1.8",
 		"@types/wicg-file-system-access": "^2020.9.5",
 		"@vitejs/plugin-vue": "^2.3.3",
 		"firebase-tools": "^11.2.0",
 		"prettier": "^2.7.1",
 		"typescript": "^4.7.4",
 		"unocss": "^0.42.0",
+		"unocss-preset-scrollbar": "^0.2.1",
 		"unplugin-auto-import": "^0.9.2",
 		"unplugin-vue-components": "^0.21.0",
 		"vite": "^2.9.13",
