--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-	"name": "frontend",
+	"name": "myapp",
+	"version": "0.0.1",
 	"private": true,
-	"version": "0.0.0",
 	"scripts": {
-		"dev": "vite --host",
-		"build": "vue-tsc --noEmit && vite build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"preview": "vite preview",
-		"deploy:dev": "pnpm run build && firebase deploy --only hosting --project dev",
-		"deploy:prod": "pnpm run build && firebase deploy --only hosting --project prod"
-	},
-	"dependencies": {
-		"@splitbee/web": "^0.3.0",
-		"@unocss/reset": "^0.42.0",
-		"@vueuse/core": "^8.7.5",
-		"firebase": "^9.8.4",
-		"nanoid": "^4.0.0",
-		"vue": "^3.2.37"
+		"test": "npm run test:integration && npm run test:unit",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@iconify-json/material-symbols": "^1.1.8",
-		"@types/wicg-file-system-access": "^2020.9.5",
-		"@vitejs/plugin-vue": "^2.3.3",
-		"firebase-tools": "^11.2.0",
-		"prettier": "^2.7.1",
-		"typescript": "^4.7.4",
-		"unocss": "^0.42.0",
-		"unocss-preset-scrollbar": "^0.2.1",
-		"unplugin-auto-import": "^0.9.2",
-		"unplugin-vue-components": "^0.21.0",
-		"vite": "^2.9.13",
-		"vite-plugin-pwa": "^0.12.2",
-		"vue-tsc": "^0.38.2"
-	}
+		"@playwright/test": "1.44.0",
+		"@sveltejs/adapter-auto": "3.2.0",
+		"@sveltejs/adapter-cloudflare": "4.4.0",
+		"@sveltejs/kit": "2.5.7",
+		"@sveltejs/vite-plugin-svelte": "3.1.0",
+		"prettier": "3.2.5",
+		"prettier-plugin-svelte": "3.2.3",
+		"svelte": "5.0.0-next.123",
+		"svelte-check": "3.7.1",
+		"tslib": "2.6.2",
+		"typescript": "5.4.5",
+		"unocss": "^0.59.4",
+		"vite": "5.2.11",
+		"vitest": "1.6.0"
+	},
+	"type": "module"
 }
