--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-	"name": "myapp",
+	"name": "ez-share",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
+	"engines": {
+		"node": "20"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -12,7 +16,9 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"deploay:dev": "pnpm build && wrangler pages deploy",
+		"deploay:prod": "pnpm build && wrangler pages deploy --branch main"
 	},
 	"devDependencies": {
 		"@playwright/test": "1.44.0",
@@ -21,14 +27,16 @@
 		"@sveltejs/kit": "2.5.7",
 		"@sveltejs/vite-plugin-svelte": "3.1.0",
 		"prettier": "3.2.5",
+		"prettier-plugin-organize-imports": "^3.2.4",
 		"prettier-plugin-svelte": "3.2.3",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"svelte": "5.0.0-next.123",
 		"svelte-check": "3.7.1",
 		"tslib": "2.6.2",
 		"typescript": "5.4.5",
-		"unocss": "^0.59.4",
+		"unocss": "0.59.4",
 		"vite": "5.2.11",
-		"vitest": "1.6.0"
-	},
-	"type": "module"
+		"vitest": "1.6.0",
+		"wrangler": "3.53.1"
+	}
 }
