--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"baseBranches": ["main"],
+	"extends": ["config:recommended", "group:allNonMajor", ":semanticCommitTypeAll(chore)"],
 	"packageRules": [
 		{
 			"packageNames": ["node"],
@@ -7,6 +9,10 @@
 		}
 	],
 	"rangeStrategy": "pin",
+	"lockFileMaintenance": {
+		"commitMessageAction": "Update",
+		"extends": ["group:all"]
+	},
 	"npm": {
 		"commitMessageTopic": "{{prettyDepType}} {{depName}}"
 	}
