--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"cf-typegen": "wrangler types --env preview  && move worker-configuration.d.ts src/",
 		"studio": "drizzle-kit studio",
 		"migrations:generate": "drizzle-kit generate",
-		"migrations:run": "wrangler d1 migrations apply ez-share-dev --env preview"
+		"migrations:run:local": "wrangler d1 migrations apply ez-share-dev --env preview",
+		"migrations:run:dev": "wrangler d1 migrations apply ez-share-dev --remote --env preview",
+		"migrations:run:prod": "wrangler d1 migrations apply ez-share-prod --remote --env production"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "4.20240512.0",
