--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"type": "module",
 	"engines": {
-		"node": "20"
+		"node": "20",
+		"pnpm": "9"
 	},
 	"scripts": {
 		"dev": "vite dev --port 3000",
