--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"engines": {
 		"node": "20",
-    "pnpm": "9"
+		"pnpm": "9"
 	},
 	"scripts": {
 		"dev": "vite dev --port 3000",
@@ -21,12 +21,13 @@
 		"deploy:dev": "pnpm build && wrangler pages deploy --branch dev",
 		"deploy:prod": "pnpm build && wrangler pages deploy --branch main",
 		"cf-typegen": "wrangler types --env preview  && move worker-configuration.d.ts src/",
-		"studio": "drizzle-kit studio",
+		"studio:dev": "drizzle-kit studio -- --dev",
+		"studio:prod": "drizzle-kit studio -- --prod",
 		"db:push": "drizzle-kit push",
 		"migrations:generate": "drizzle-kit generate",
 		"migrations:run:local": "wrangler d1 migrations apply ez-share-dev --env preview",
-		"migrations:run:dev": "wrangler d1 migrations apply ez-share-dev --remote --env preview",
-		"migrations:run:prod": "wrangler d1 migrations apply ez-share-prod --remote --env production"
+		"migrations:run:dev": "drizzle-kit migrate -- --dev",
+		"migrations:run:prod": "drizzle-kit migrate -- --prod"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "4.20240529.0",
@@ -34,6 +35,7 @@
 		"@sveltejs/adapter-cloudflare": "4.4.0",
 		"@sveltejs/kit": "2.5.10",
 		"@sveltejs/vite-plugin-svelte": "3.1.1",
+		"dotenv": "16.4.5",
 		"drizzle-kit": "0.22.1",
 		"prettier": "3.3.0",
 		"prettier-plugin-organize-imports": "3.2.4",
@@ -50,6 +52,7 @@
 	},
 	"dependencies": {
 		"@unocss/reset": "0.60.4",
+		"dayjs": "1.11.11",
 		"drizzle-orm": "0.31.0",
 		"zod": "3.23.8"
 	}
