db stuff, hash fonts

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
 		"deploy:dev": "pnpm build && wrangler pages deploy --branch dev",
 		"deploy:prod": "pnpm build && wrangler pages deploy --branch main",
 		"cf-typegen": "wrangler types --env preview  && move worker-configuration.d.ts src/",
+		"studio:local": "drizzle-kit studio",
 		"studio:dev": "drizzle-kit studio -- --dev",
 		"studio:prod": "drizzle-kit studio -- --prod",
 		"db:push": "drizzle-kit push",
 		"migrations:generate": "drizzle-kit generate",
-		"migrations:run:local": "wrangler d1 migrations apply ez-share-dev --env preview",
+		"migrations:run:local": "drizzle-kit migrate",
 		"migrations:run:dev": "drizzle-kit migrate -- --dev",
 		"migrations:run:prod": "drizzle-kit migrate -- --prod"
 	},
@@ -35,6 +36,7 @@
 		"@sveltejs/adapter-cloudflare": "4.4.0",
 		"@sveltejs/kit": "2.5.10",
 		"@sveltejs/vite-plugin-svelte": "3.1.1",
+		"better-sqlite3": "^11.0.0",
 		"dotenv": "16.4.5",
 		"drizzle-kit": "0.22.1",
 		"prettier": "3.3.0",
