--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
-	"packageManager": "pnpm@9.15.9",
+	"packageManager": "pnpm@10.11.0",
 	"engines": {
-		"node": "20",
-		"pnpm": "9"
+		"node": "22",
+		"pnpm": "10"
 	},
 	"scripts": {
 		"dev": "vite dev --port 3000",
@@ -29,7 +29,8 @@
 		"migrations:generate": "drizzle-kit generate",
 		"migrations:run:local": "drizzle-kit migrate",
 		"migrations:run:dev": "drizzle-kit migrate -- --dev",
-		"migrations:run:prod": "drizzle-kit migrate -- --prod"
+		"migrations:run:prod": "drizzle-kit migrate -- --prod",
+		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "4.20250525.0",
