--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
 		"binding": "ASSETS",
 	},
 	"compatibility_date": "2025-05-25",
+	"compatibility_flags": ["nodejs_compat"],
 
 	"observability": { "enabled": true },
 	"placement": { "mode": "smart" },
